syntax = "proto3";

package memos.store;

option go_package = "gen/store";

enum WorkspaceSettingKey {
  WORKSPACE_SETTING_KEY_UNSPECIFIED = 0;
  // WORKSPACE_SETTING_GENERAL is the key for general settings.
  WORKSPACE_SETTING_GENERAL = 1;
  // WORKSPACE_SETTING_MEMO_RELATED is the key for memo related settings.
  WORKSPACE_SETTING_MEMO_RELATED = 2;
}

message WorkspaceSetting {
  WorkspaceSettingKey key = 1;
  oneof value {
    WorkspaceGeneralSetting general_setting = 2;
    WorkspaceMemoRelatedSetting memo_related_setting = 3;
  }
}

message WorkspaceGeneralSetting {
  // instance_url is the instance URL.
  string instance_url = 1;
  // disallow_signup is the flag to disallow signup.
  bool disallow_signup = 2;
  // disallow_password_login is the flag to disallow password login.
  bool disallow_password_login = 3;
  // additional_script is the additional script.
  string additional_script = 5;
  // additional_style is the additional style.
  string additional_style = 6;
}

message WorkspaceMemoRelatedSetting {
  // disallow_public_share disallows set memo as public visible.
  bool disallow_public_visible = 1;
  // display_with_update_time orders and displays memo with update time.
  bool display_with_update_time = 2;
}
